# chatfi-predict

./: .gitignore  Anchor.toml  package.json  tsconfig.json
.github/workflows/: anchor-ci.yml
prediction-market/: Anchor.toml  Cargo.toml  README.md
prediction-market/programs/prediction_market/src/: errors.rs  lib.rs
prediction-market/programs/prediction_market/src/instructions/: claim_payout_native.rs  collect_fees_native.rs  initialize_config.rs
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: constants.rs  lib.rs  state.rs
programs/prediction_market/src/instructions/: claim_payout_spl.rs  collect_fees_spl.rs  create_pool_native.rs  create_pool_spl.rs  mod.rs  place_stake_native.rs  place_stake_spl.rs  resolve_pool.rs
tests/: prediction-market.ts
